syntax = "proto3";

package routeguide;

service RouteGuide {
  // Normal rpc
  rpc GetFeature(Point) returns (Feature) {}
  // server-side streaming.
  // client service
  rpc ListFeatures(Rectangle) returns (stream Feature) {}
  // client-side streaming. send stream data to server.
  rpc RecordRoute(stream Point) returns (RouteSummary) {}
  // bidirectional streaming
  rpc RouteChat(stream RouteNote) returns (stream RouteNote) {}
}

message Point {
  int32 lattitude = 1;
  int32 longititude = 2;
}

message Rectangle {
  Point lo = 1;
  Point hi = 2;
}

message Feature {
  string name = 1;
  Point location =2;
}

message RouteNote {
  Point location = 1;
  string message = 2;
}

message RouteSummary {
  int32 point_count = 1;
  int32 feature_count = 2;
  int32 distance = 3;
  int32 elapsed_time = 4;
}